--- a/수행결과/0718작업/작업상황.md
+++ b/수행결과/0718작업/작업상황.md
@@ -1,1 +1,2 @@
-현재 아이템 공속도 증가, 바 길이 증가만 구현된 상태입니다. 나머지 아이템 구현중이면 점수판과 게임 오버 시 보여질 화면 작성해야합니다.
+1.현재 아이템 공속도 증가, 바 길이 증가만 구현된 상태입니다. 나머지 아이템 구현중이면 점수판과 게임 오버 시 보여질 화면 작성해야합니다.
++다음 스테이지로 넘어가는 아이템 추가하였습니다.
